--- a/Formularios/Albumes.css
+++ b/Formularios/Albumes.css
@@ -58,18 +58,38 @@ nav {
       box-shadow: 0px 0px 20px 5px #AAA; 
       border-radius: 10px;  
       width: 45%; 
-      height: 430px;
+      height: 600px;
       margin: 0px auto 0 auto;
       padding: 10px 10px;  
       animation: bounce 1.5s infinite;
     }
   
     h1 {
-      font-size: xx-large;
-      text-align: center;
-      color: rgb(255, 255, 255);
-    }
-  
+        font-size: xx-large;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        padding-bottom: 30px;
+      }
+      h2 {
+          text-align: left;
+          padding-left: 63px;
+          color: rgb(255, 255, 255);
+        }
+    .opciones {
+        text-align: left;
+        padding-left: 63px;
+        padding-bottom: 0px;
+     }
+    .custom-select {
+        font-size: 16px; /* Cambiar el tamaño de la fuente */
+        background-color: #2414d2; /* Cambiar el color de fondo */
+        color: white; /* Cambiar el color del texto */
+        padding: 10px; /* Añadir espaciado interno para hacerlo más grande */
+        border: none; /* Eliminar el borde predeterminado */
+        border-radius: 5px; /* Agregar esquinas redondeadas */
+        outline: none; /* Eliminar el resaltado predeterminado al hacer clic */
+      }
+      
   .name { 
       background-color: #2414d2;
       border-bottom: 5px solid #2414d2;
