--- a/Formularios/Albumes.css
+++ b/Formularios/Albumes.css
@@ -57,8 +57,8 @@ nav {
       text-align: center; 
       box-shadow: 0px 0px 20px 5px #AAA; 
       border-radius: 10px;  
-      width: 45%; 
-      height: 600px;
+      width: 48%; 
+      height: 800px;
       margin: 0px auto 0 auto;
       padding: 10px 10px;  
       animation: bounce 1.5s infinite;
@@ -77,17 +77,18 @@ nav {
         }
     .opciones {
         text-align: left;
-        padding-left: 63px;
+        padding-left: 80px;
         padding-bottom: 0px;
      }
     .custom-select {
-        font-size: 16px; /* Cambiar el tamaño de la fuente */
-        background-color: #2414d2; /* Cambiar el color de fondo */
-        color: white; /* Cambiar el color del texto */
-        padding: 10px; /* Añadir espaciado interno para hacerlo más grande */
-        border: none; /* Eliminar el borde predeterminado */
-        border-radius: 5px; /* Agregar esquinas redondeadas */
-        outline: none; /* Eliminar el resaltado predeterminado al hacer clic */
+        font-size: 16px; 
+        width: 320px;
+        background-color: #2414d2; 
+        color: white; 
+        padding: 10px; 
+        border: none; 
+        border-radius: 5px; 
+        outline: none; 
       }
       
   .name { 
